wordpress/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql
  namespace: practice
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  replicas: 1

  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          # env:
          #   - name: MYSQL_ROOT_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: mysql-pass
          #         key: password

          ports:
            - name: mysql
              containerPort: 3306 
          livenessProbe:
            tcpSocket:
              port: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

---

###############################   SVC

apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: practice
  labels:
    app: wordpress
spec:
  ports:
    - name: mysql-port
      port: 3306
      targetPort: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
